--- a/css/style.css
+++ b/css/style.css
@@ -220,6 +220,7 @@ p{
     padding-left: 17px;
     padding-right: 17px;
     margin-top: 50px;
+    margin-bottom: 10px;
 }
 .image-projeto{
     border-radius: 20px;
@@ -227,11 +228,35 @@ p{
     width: 350px;
 }
 .projeto{
+    display: flex;
     margin-top: 30px;
     transition: transform 0.3s ease;
     border: 1px solid rgb(255,119,22);
     padding: 26px;
     border-radius: 16px;
+    flex-direction: column;
+}
+.git-hub-projeto{
+    display: flex;
+    gap: 20px;
+}
+
+.ver-projeto{
+    color:rgb(255,119,22) ;
+    border: 1px solid rgb(255,119,22);
+    background:none;
+    font-size: 16px;
+    border-radius: 12px;
+    padding: 4px;
+    padding-left: 17px;
+    padding-right: 17px;
+    cursor: pointer;
+    text-decoration: none;
+    max-width: fit-content;
+}
+.ver-projeto:hover{
+    color: #fff;
+    border:1px solid #fff;
 }
 .projeto:hover{
     transform: scale(1.035);
